<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.timferrell.sampleapp579.DisplayClassInformation"
    tools:showIn="@layout/activity_display_class_information">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courseTitle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructorInfoButton"
        android:onClick="displayInstructorInfo"/>

    <TextView android:id="@+id/instructorInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructorInfo"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taInfoButton"
        android:onClick="displayTaInfo"/>

    <TextView android:id="@+id/taInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taInfo"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamInfoButton"
        android:onClick="displayTeamInfo"/>

    <TextView android:id="@+id/teamInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamInfo"
        android:visibility="gone"/>


    <ImageView
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:src="@drawable/usclogo"/>



</LinearLayout>
